# Setup-Agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PLAN-ANDROID-SUPPORT.md  README.md  function-calling.ipynb  main.py  pyproject.toml  report refactoring.md
.design-sync/: NOTES.md  config.json  conventions.md
.design-sync/previews/: Badge.tsx  BuildCard.tsx  BuildDetailPage.tsx  BuildFacet.tsx  Button.tsx  Card.tsx  CardHead.tsx  ContextTrace.tsx  DeleteWorkspaceDialog.tsx  DetailHeader.tsx  DetailPane.tsx  EvidenceTimeline.tsx  FacetTabs.tsx  FailingCard.tsx  FilesDigest.tsx  LabeledStatus.tsx  LaunchSetupsDialog.tsx  LogsView.tsx  ModuleBreakdownDialog.tsx  ModuleTable.tsx  NewTaskModal.tsx  RailSkeleton.tsx  ReportDoc.tsx  StatusBadge.tsx  SummaryBand.tsx  Tabs.tsx  TerminalPanel.tsx  TestBar.tsx  TestCard.tsx  TestConclusionCard.tsx  TestDetailPage.tsx  TestFacet.tsx  WorkspacePanel.tsx  WorkspaceRail.tsx  WorkspaceSettings.tsx  _fixtures.ts
.github/workflows/: pages.yml
.impeccable/: design.json
.impeccable/live/: config.json
agent/: __init__.py  agent.py  agent_state_evaluator.py  context_manager.py  error_logger.py  output_storage.py  physical_validator.py  react_engine.py  skill_engine.py  token_tracker.py
config/: __init__.py  git_utils.py  logger.py  models.py  settings.py
docker_orch/: __init__.py  orch.py
docs/: DESIGN.md  PRODUCT.md  maven_tool_improvements.md
docs/Setup Agent Web UI/: 2026-06-07-webui-design-improvement.md
examples/: claude_thinking_example.py
model/: ChatBase.py  chat.py
reporting/: __init__.py  utils.py
scripts/: accept_web_ui.py  category3_panel.json  collect_control_layer_ab.py  control_layer_panel.json  panel_category3_evaluator.py  run_category3_panel.py  run_category3_stage2.py
testcases/: __init__.py  catalog.py
tests/: conftest.py  test_agent_final_status.py  test_attempt_ledger.py  test_attempt_ledger_failure_tail.py  test_bash_tool_timeout.py  test_build_islands.py  test_build_preflight.py  test_build_test_verdict.py  test_build_tool.py  test_build_tool_preflight_integration.py  test_build_tool_python_backend.py  test_category3_panel_registry.py  test_cli_project_exit_codes.py  test_cli_report_verdict_mirror.py  test_command_tracker.py  test_compileall_metrics.py  test_config_settings.py  test_container_io.py  test_context_evidence_state.py  test_context_journal.py  test_context_tool_completion.py  test_context_tool_completion_validation.py  test_context_tool_next_tasks.py  test_control_layer_ab_collector.py  test_control_layer_replay.py  test_coverage_cli.py  test_coverage_merge.py  test_coverage_runner.py  test_current_plan.py  test_denominator_isolation.py  test_dispatch_and_poll.py  test_docker_orchestrator_command_wrapping.py  test_env_overlay.py  test_env_overlay_toolchain.py  test_evidence_ingestion.py  test_evidence_models.py  test_execution_rate_clamp.py  test_execution_summary.py  test_explicit_evidence_architecture.py  test_facts_only_behavior.py  (+153 more)
tools/: __init__.py  base.py  bash.py  build_utils.py  command_tracker.py  context_tool.py  docker_tool.py  enhanced_base.py  enhanced_context_tool.py  file_io.py  gradle_tool.py  maven_tool.py  output_search_tool.py  project_analyzer.py  project_setup_tool.py  report_tool.py  skill_tool.py  system_tool.py  web_search.py
ui/: components.py  events.py  ui_manager.py
website/: CNAME  index.html  package-lock.json  package.json
webui/: .ds-entry.tsx  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+588 files in other folders)
