[project]
name = "setup-agent"
version = "0.1.2"
description = "LLM Powered open source project setup agent"
authors = [
    {name = "Setup-Agent Contributors"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.0",
    "docker>=7.1.0",
    "litellm==1.77.5",
    "requests>=2.32.5",
    "pydantic>=2.11.9",
    "rich>=14.1.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.1",
    "openai>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
]

[project.scripts]
sag = "main:cli"

[tool.hatch.build.targets.wheel]
packages = ["agent", "config", "docker_orch", "tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=6.1.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
